<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleMarginBottom="@dimen/cover_letter_title_margin_bottom"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/pictureImageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/cover_letter_picture_height"
                android:contentDescription="@string/cover_letter_image_description"
                android:scaleType="centerCrop"
                android:src="@drawable/desk"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:title="@string/cover_letter_title" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:requiresFadingEdge="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/standard_margin"
            android:paddingEnd="@dimen/standard_margin"
            android:paddingStart="@dimen/standard_margin"
            android:paddingTop="@dimen/large_margin">

            <TextView
                android:id="@+id/coverLetterTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="@dimen/cover_letter_line_spacing_extra"
                android:textSize="@dimen/cover_letter_text_size"
                tools:text="@string/cover_letter" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.v7.widget.CardView
        android:id="@+id/hireMeButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/hire_me_button_height"
        android:layout_marginEnd="@dimen/large_margin"
        android:layout_marginStart="@dimen/large_margin"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/ic_email"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="@dimen/hire_me_button_corner_radius"
        app:cardElevation="@dimen/hire_me_button_elevation"
        app:layout_anchor="@id/appBarLayout"
        app:layout_anchorGravity="bottom|center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/hire_me_button_text"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/hire_me_button_text_size" />

    </android.support.v7.widget.CardView>

</android.support.design.widget.CoordinatorLayout>
