<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/half_standard_margin"
    android:layout_marginEnd="@dimen/standard_margin"
    android:layout_marginStart="@dimen/standard_margin"
    android:layout_marginTop="@dimen/half_standard_margin"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/half_standard_margin">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/resume_item_image_size"
            android:layout_height="@dimen/resume_item_image_size"
            android:layout_margin="@dimen/half_standard_margin"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            tools:src="@drawable/arctouch" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/half_standard_margin"
            android:layout_marginStart="@dimen/half_standard_margin"
            android:layout_marginTop="@dimen/half_standard_margin"
            android:layout_toEndOf="@id/imageView"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="@dimen/resume_item_title_text_size"
            android:textStyle="bold"
            tools:text="@string/arctouch_title" />

        <TextView
            android:id="@+id/datesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTextView"
            android:layout_marginEnd="@dimen/half_standard_margin"
            android:layout_marginStart="@dimen/half_standard_margin"
            android:layout_toEndOf="@id/imageView"
            android:ellipsize="end"
            android:maxLines="1"
            android:textSize="@dimen/resume_item_dates_text_size"
            tools:text="@string/arctouch_dates" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/datesTextView"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/half_standard_margin"
            android:layout_marginEnd="@dimen/half_standard_margin"
            android:layout_marginStart="@dimen/half_standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:textSize="@dimen/resume_item_description_text_size"
            tools:text="@string/arctouch_description" />

    </RelativeLayout>

</android.support.v7.widget.CardView>
